--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <section>
       <h2 class="sec-title">About Me</h2>
       <p>I’m a naturally tech‑minded person who loves creating, connecting, and exploring. I’m passionate about making the kinds of games I grew up playing, and I’m driven to build experiences that inspire and bring people together.</p>
-      <p>Outside of development, I’m deeply spiritual and curious about the world — I want to travel, learn from different cultures, and meet people from all walks of life. My dream is to create meaningful projects, to be able to travel, and live fully in the purpose I was made for.</p>
+      <p>Outside of development, I’m deeply spiritual and curious about the world — I want to travel, learn from different cultures, and meet people from all walks of life. My dream is to create meaningful projects, be able to travel, and live a connected existence.</p>
       <h3 style="margin:8px 0 6px">Some of the games I love</h3>
       <ul class="clean">
         <li>Halo</li>
