--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class="hero">
         <div>
           <h1 class="title">Ryan R — <span style="background:linear-gradient(90deg,var(--primary),var(--accent));-webkit-background-clip:text;background-clip:text;color:transparent">Game Developer &amp; Programmer</span></h1>
-          <p class="subtitle">I’m a tech‑minded builder who loves creating systems and feel. I make the kinds of games I grew up playing and aim to build experiences that bring people together.</p>
+          <p class="subtitle">Logical minded person who loves building, connecting, and exploring. I’m passionate about making the kinds of games I grew up playing. I specialize in Uinty, but have skills in many other things, tech related and beyond.</p>
           <div class="badges">
             <span class="badge">Unity / C#</span>
             <span class="badge">Gameplay</span>
@@ -132,21 +132,7 @@
       <div class="blob" aria-hidden="true"></div>
     </header>
 
-    <section>
-      <h2 class="sec-title">About Me</h2>
-      <p>I’m a naturally tech‑minded person who loves creating, connecting, and exploring. I’m passionate about making the kinds of games I grew up playing, and I’m driven to build experiences that inspire and bring people together.</p>
-      <p>Outside of development, I’m deeply spiritual and curious about the world — I want to travel, learn from different cultures, and meet people from all walks of life. My dream is to create meaningful projects, be able to travel, and live a connected existence.</p>
-      <h3 style="margin:8px 0 6px">Some of the games I love</h3>
-      <ul class="clean">
-        <li>Halo</li>
-        <li>Dishonored</li>
-        <li>Left 4 Dead</li>
-        <li>Hollow Knight</li>
-        <li>Age of Mythology</li>
-        <li>BioShock Infinite</li>
-        <li>Mass Effect</li>
-      </ul>
-    </section>
+
 
     <section>
       <h2 class="sec-title">Projects</h2>
@@ -199,7 +185,23 @@
         </article>
       </div>
     </section>
-
+	
+    <section>
+      <h2 class="sec-title">About Me</h2>
+      <p></p>
+      <p>Outside of development, I’m deeply spiritual and curious about the world — I want to travel, learn from different cultures, and meet people from all walks of life.</p>
+      <h3 style="margin:8px 0 6px">Some of the games I love</h3>
+      <ul class="clean">
+        <li>Halo</li>
+        <li>Dishonored</li>
+        <li>Left 4 Dead</li>
+        <li>Hollow Knight</li>
+        <li>Slay the Spire</li>
+        <li>BioShock Infinite</li>
+        <li>Mass Effect</li>
+      </ul>
+    </section>
+	
     <section>
       <h2 class="sec-title">Other Skills</h2>
       <p>Beyond game dev, I can tackle software, hardware, and practical projects.</p>
