--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ryan R — Game Dev & Programmer</title>
+  <title>Ryan R — Game Dev & Full Stack Programmer</title>
   <meta name="description" content="Portfolio of Ryan R — Unity developer and programmer. Projects include a card-based strategy game, Name Recall Challenge (EEG), a farm sim, and an unwinnable tic-tac-toe." />
   <meta name="robots" content="index, follow" />
   <meta name="color-scheme" content="light dark" />
@@ -144,7 +144,7 @@
     <div class="grid">
       <article class="card">
         <h3>Card-Based Strategy Game</h3>
-        <p>A Slay‑the‑Spire‑style deckbuilder focused on clearing waves of enemies. Built in Unity using a turn manager and ScriptableObject card system. Features hand‑drawn art.</p>
+        <p>A Slay‑the‑Spire‑style deckbuilder focused on clearing waves of enemies and building a deck. Features some custom art.</p>
         <div class="embed">
           <iframe src="https://www.youtube.com/embed/lk1gdjNjQ88?mute=0&loop=1&playlist=lk1gdjNjQ88" allow="encrypted-media" allowfullscreen></iframe>
         </div>
@@ -165,7 +165,7 @@
 
       <article class="card">
         <h3>Farm Game</h3>
-        <p>A farm game similar to Stardew Valley or Harvest Moon. Shows different systems (inventory hot‑swap, crop lifecycle, scene persistence). First real Unity project; some art original.</p>
+        <p>A farm game similar to Stardew Valley or Harvest Moon. Shows off a tile based farm/crop system and a dialog system. First real Unity project; some art original.</p>
         <div class="embed">
           <iframe src="https://www.youtube.com/embed/UWodgMyIYIs?mute=0&loop=1&playlist=UWodgMyIYIs" allow="encrypted-media" allowfullscreen></iframe>
         </div>
@@ -174,7 +174,7 @@
 
       <article class="card">
         <h3>Unwinnable Tic‑Tac‑Toe</h3>
-        <p>You can’t win.</p>
+        <p>Quick project I made for fun. You can’t win.</p>
         <div class="embed">
           <iframe src="https://www.youtube.com/embed/2hGbSUb_NqI?mute=0&loop=1&playlist=2hGbSUb_NqI" allow="encrypted-media" allowfullscreen></iframe>
         </div>
@@ -183,7 +183,7 @@
     </div>
 
     <h2>About Me</h2>
-    <p>Outside of development, I’m deeply spiritual and curious about the world — I want to travel, learn from different cultures, and meet people from all walks of life.</p>
+    <p>Outside of development, I’m a spiritual and curious person — I want to grow with others, learn from different cultures, and meet people from all walks of life.</p>
     <h3 style="margin:8px 0 6px">Some of the games I love</h3>
     <ul>
       <li>Halo</li>
@@ -198,10 +198,10 @@
     <h2>Other Skills</h2>
     <p>Beyond game dev, I can tackle software, hardware, and practical projects.</p>
     <ul>
-      <li><strong>Programming:</strong> C, C#, C++, Python</li>
-      <li><strong>Engineering Tools:</strong> SolidWorks, Unity</li>
-      <li><strong>Hardware Experience:</strong> Microcontrollers, soldering, 3D printing, laser cutting</li>
-      <li><strong>Life Skills:</strong> Recovery &amp; life coach — 10 years</li>
+      <li><strong>Programming:</strong> C, C#, C++, Python, SolidWorks, Unity</li>
+      <li><strong>Engineering Tools:</strong>Calculus, IT</li>
+      <li><strong>Hardware Experience:</strong> Microcontrollers, Soldering, 3D Printing, Laser Cutting</li>
+      <li><strong>Life Skills:</strong> Recovery and life coach — 10 years, Inter/Intra-personal skills</li>
     </ul>
 
     <h2>Contact</h2>
