--- a/index.html
+++ b/index.html
@@ -116,8 +116,10 @@
 <body>
   <div class="container">
     <header>
-      <h1>Ryan R — Game Developer & Programmer</h1>
-      <p>Logical minded person who loves building, connecting, and exploring. I’m passionate about making the kinds of games I grew up playing. I specialize in Unity, but have skills in many other things, tech related and beyond.</p>
+      <h1>Ryan R — </h1>
+      <p>Game Developer & Full Stack Programmer</p>
+	  <p>I've been honing my programming skills for 7+ years in and out of college. I'm a fast learner and very capable person</p>
+	  <p>All my Unity skills I taught myself and can teach myself any languages or skills</p>
 
       <div class="badges">
         <span class="badge">Unity / C#</span>
