--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" data-theme="auto">
 <head>
   <meta charset="UTF-8" />
@@ -10,127 +10,94 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     /* ---------------------------------------------------------
-       THEME SYSTEM (Auto / Light / Dark)
-       Uses CSS variables on :root and data-theme override
+       THEME SYSTEM
+       Modes: auto (default), light, dark
+       Sets CSS variables on :root and overrides via [data-theme]
     --------------------------------------------------------- */
     :root{
-      --bg-start: 247 249 252;   /* gradient top */
-      --bg-end:   236 241 255;   /* gradient bottom */
-      --accent:   37 99 235;     /* indigo-600 */
-      --accent-2: 236 72 153;    /* pink-500 */
-
-      --card: 255 255 255 / 0.65;   /* glass */
-      --surface: 255 255 255 / 0.35;/* lighter glass */
-      --text: 31 41 55;             /* slate-800 */
-      --muted: 75 85 99;            /* slate-600 */
-      --border: 0 0 0 / .12;
-      --ring: 37 99 235 / .35;
-
-      --radius: 14px;
-      --shadow: 0 10px 30px rgba(10,10,20,.08);
+      --bg:#f7f9fc;
+      --card:#ffffff;
+      --text:#1f2937;
+      --muted:#4b5563;
+      --border:rgba(0,0,0,.08);
+      --accent:#2563eb;
+      --accent-contrast:#ffffff;
+      --shadow: 0 2px 10px rgba(0,0,0,.06);
+      --radius:14px;
+      --focus: 0 0 0 3px rgba(37,99,235,.35);
     }
     @media (prefers-color-scheme: dark){
       :root{
-        --bg-start: 12 16 28;
-        --bg-end:   8 12 24;
-        --accent:   129 140 248;  /* indigo-400 */
-        --accent-2: 244 114 182;  /* pink-400 */
-
-        --card: 255 255 255 / 0.06;
-        --surface: 255 255 255 / 0.04;
-        --text: 229 231 235;      /* gray-200 */
-        --muted: 163 169 183;     /* slate-400 */
-        --border: 255 255 255 / .10;
-        --ring: 129 140 248 / .40;
-
-        --shadow: 0 20px 50px rgba(0,0,0,.55);
+        --bg:#0b1220;
+        --card:#0f172a;
+        --text:#e5e7eb;
+        --muted:#a3a9b7;
+        --border:rgba(255,255,255,.08);
+        --accent:#60a5fa;
+        --accent-contrast:#0b1220;
+        --shadow: 0 6px 18px rgba(0,0,0,.45);
+        --focus: 0 0 0 3px rgba(96,165,250,.45);
       }
     }
-    html[data-theme="light"] :root, html[data-theme="light"] body{color-scheme: light}
-    html[data-theme="dark"]  :root, html[data-theme="dark"] body{color-scheme: dark}
-
+    /* Force modes */
+    html[data-theme="light"] :root, html[data-theme="light"] body{color-scheme: light;}
+    html[data-theme="dark"]  :root, html[data-theme="dark"] body{color-scheme: dark;}
     html[data-theme="light"]{
-      --bg-start: 247 249 252; --bg-end: 236 241 255;
-      --accent: 37 99 235; --accent-2: 236 72 153;
-      --card: 255 255 255 / 0.7; --surface: 255 255 255 / 0.45;
-      --text: 31 41 55; --muted: 75 85 99; --border: 0 0 0 / .12; --ring: 37 99 235 / .35;
-      --shadow: 0 10px 30px rgba(10,10,20,.08);
+      --bg:#f7f9fc; --card:#ffffff; --text:#1f2937; --muted:#4b5563; --border:rgba(0,0,0,.08);
+      --accent:#2563eb; --accent-contrast:#ffffff; --shadow:0 2px 10px rgba(0,0,0,.06); --focus:0 0 0 3px rgba(37,99,235,.35);
     }
     html[data-theme="dark"]{
-      --bg-start: 12 16 28; --bg-end: 8 12 24;
-      --accent: 129 140 248; --accent-2: 244 114 182;
-      --card: 255 255 255 / 0.06; --surface: 255 255 255 / 0.04;
-      --text: 229 231 235; --muted: 163 169 183; --border: 255 255 255 / .10; --ring: 129 140 248 / .40;
-      --shadow: 0 20px 50px rgba(0,0,0,.55);
+      --bg:#0b1220; --card:#0f172a; --text:#e5e7eb; --muted:#a3a9b7; --border:rgba(255,255,255,.08);
+      --accent:#60a5fa; --accent-contrast:#0b1220; --shadow:0 6px 18px rgba(0,0,0,.45); --focus:0 0 0 3px rgba(96,165,250,.45);
     }
 
     /* ---------------------------------------------------------
-       BASE STYLES + BACKGROUND
+       BASE STYLES
     --------------------------------------------------------- */
     *{box-sizing:border-box}
     body{
-      margin:0; font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; color:rgb(var(--text)); line-height:1.6;
-      background:
-        radial-gradient(1200px 600px at 85% -10%, rgba(var(--accent) / .14), transparent 60%),
-        radial-gradient(1000px 800px at -10% 25%, rgba(var(--accent-2) / .14), transparent 60%),
-        linear-gradient(180deg, rgb(var(--bg-start)) 0%, rgb(var(--bg-end)) 100%);
+      margin:0; font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; background:var(--bg); color:var(--text);
+      line-height:1.6;
       transition: background-color .25s ease, color .25s ease;
-      min-height: 100svh;
     }
-    /* Subtle noise texture for depth */
-    .noise{ position:fixed; inset:0; z-index:-1; pointer-events:none;
-      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="160" height="160"><filter id="n"><feTurbulence type="fractalNoise" baseFrequency="0.8" numOctaves="2" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(%23n)" opacity=".04"/></svg>');
-      mix-blend-mode: soft-light; opacity:.9
-    }
-
-    .container{max-width:1000px;margin:0 auto;padding: clamp(20px, 3vw, 28px)}
+    .container{max-width:1000px;margin:0 auto;padding:24px}
     a{color:inherit;text-decoration:none}
     .btn{
-      display:inline-block; background: linear-gradient(90deg, rgb(var(--accent)), rgb(var(--accent-2))); color:#fff; padding:10px 16px; border-radius:var(--radius);
-      font-weight:700; border:1px solid rgba(var(--accent) / .4); box-shadow:var(--shadow); transition: transform .15s ease, filter .2s ease;
+      display:inline-block; background:var(--accent); color:var(--accent-contrast); padding:10px 16px; border-radius:var(--radius);
+      font-weight:600; border:1px solid transparent; box-shadow:var(--shadow); transition: transform .15s ease, opacity .2s ease, filter .2s ease;
     }
     .btn:hover{transform:translateY(-1px); filter:saturate(1.05)}
-    .btn.secondary{background:rgba(var(--surface)); color:rgb(var(--text)); border:1px solid rgba(var(--border)); backdrop-filter: blur(8px)}
-    .btn:focus-visible{outline:none; box-shadow:0 0 0 3px rgba(var(--ring))}
+    .btn.secondary{background:transparent; color:var(--text); border-color:var(--border)}
+    .btn:focus-visible{outline:none; box-shadow:var(--focus)}
 
-    /* Header / Hero */
-    header{ text-align:center; padding: clamp(48px, 7vw, 80px) 16px 36px }
-    header h1{ font-size:clamp(1.9rem, 3.6vw, 2.8rem); margin:0 0 10px; letter-spacing:-.02em }
-    header p{ max-width:720px; margin:0 auto 12px; color:rgb(var(--muted)) }
+    header{ text-align:center; padding:56px 16px 40px }
+    header h1{ font-size:clamp(1.8rem, 3.4vw, 2.6rem); margin:0 0 10px }
+    header p{ max-width:720px; margin:0 auto 20px; color:var(--muted) }
 
     .top-actions{ display:flex; gap:10px; justify-content:center; align-items:center; flex-wrap:wrap; margin-top:14px }
 
     .badges{ display:flex; flex-wrap:wrap; justify-content:center; gap:8px; margin:16px 0 }
-    .badge{ background: rgba(var(--surface)); border:1px solid rgba(var(--border)); color:rgb(var(--muted)); padding:6px 10px; border-radius:999px; font-size:.85rem; backdrop-filter: blur(8px) }
+    .badge{ background:transparent; border:1px solid var(--border); color:var(--muted); padding:6px 10px; border-radius:999px; font-size:.85rem }
 
-    h2{ font-size:1.4rem; margin:26px 0 12px }
+    h2{ font-size:1.4rem; margin:24px 0 12px }
 
-    /* Cards */
     .grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:18px }
-    .card{ position:relative; background: rgba(var(--card)); border:1px solid rgba(var(--border)); border-radius:var(--radius); box-shadow:var(--shadow); padding:18px; display:flex; flex-direction:column; backdrop-filter: blur(10px); isolation:isolate; overflow:hidden }
-    .card::before{ content:""; position:absolute; inset:-1px; background: radial-gradient(600px 200px at -10% -10%, rgba(var(--accent) / .08), transparent 40%); z-index:-1 }
+    .card{ background:var(--card); border:1px solid var(--border); border-radius:var(--radius); box-shadow:var(--shadow); padding:18px; display:flex; flex-direction:column }
     .card h3{ margin:0 0 6px }
-    .card p{ color:rgb(var(--muted)); margin:0 0 8px; flex-grow:1 }
-    .card:hover{ transform: translateY(-2px); box-shadow: 0 18px 45px rgba(10,10,20,.12) }
+    .card p{ color:var(--muted); margin:0 0 8px; flex-grow:1 }
 
-    /* Video embeds */
-    .embed{ position:relative; padding-top:56.25%; border-radius:12px; overflow:hidden; margin:8px 0 10px; background:#000; border:1px solid rgba(var(--border)) }
+    .embed{ position:relative; padding-top:56.25%; border-radius:12px; overflow:hidden; margin:8px 0 10px; background:#000 }
     .embed iframe{ position:absolute; inset:0; width:100%; height:100%; border:0 }
 
-    footer{ text-align:center; font-size:.9rem; color:rgb(var(--muted)); margin:40px 0 10px }
+    footer{ text-align:center; font-size:.9rem; color:var(--muted); margin:36px 0 10px }
 
     /* Theme Toggle Control */
-    .theme-toggle{ display:inline-flex; align-items:center; gap:8px; background: rgba(var(--card)); border:1px solid rgba(var(--border)); border-radius:999px; padding:6px; box-shadow:var(--shadow); backdrop-filter: blur(8px) }
-    .theme-toggle button{ background:transparent; border:0; padding:8px 10px; border-radius:999px; cursor:pointer; color:rgb(var(--muted)); font-weight:700 }
-    .theme-toggle button[aria-pressed="true"]{ background: linear-gradient(90deg, rgb(var(--accent)), rgb(var(--accent-2))); color:#fff }
-    .visually-hidden{ position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0 }
-
-    /* Motion preferences */
-    @media (prefers-reduced-motion: no-preference){
-      .card{ transition: transform .25s ease, box-shadow .25s ease }
-      .reveal{ animation: pop .5s ease both }
-      @keyframes pop{ from{opacity:0; transform: translateY(8px) scale(.98)} }
+    .theme-toggle{ display:inline-flex; align-items:center; gap:8px; background:var(--card); border:1px solid var(--border); border-radius:999px; padding:6px; box-shadow:var(--shadow) }
+    .theme-toggle button{
+      background:transparent; border:0; padding:8px 10px; border-radius:999px; cursor:pointer; color:var(--muted); font-weight:600
     }
+    .theme-toggle button[aria-pressed="true"]{ background:var(--accent); color:var(--accent-contrast) }
+    .visually-hidden{ position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0 }
   </style>
   <script>
     /* Apply saved theme early to avoid FOUC */
@@ -147,13 +114,12 @@
   </script>
 </head>
 <body>
-  <div class="noise" aria-hidden="true"></div>
   <div class="container">
-    <header class="reveal">
-      <h1>Ryan R</h1>
+    <header>
+      <h1>Ryan R —</h1>
       <p>Game Developer & Full Stack Programmer</p>
-      <p>I've been honing my programming skills for 7+ years in and out of college. I'm a fast learner and very capable person</p>
-      <p>All my Unity skills I taught myself and can teach myself any languages or skills</p>
+	  <p>I've been honing my programming skills for 7+ years in and out of college. I'm a fast learner and very capable person</p>
+	  <p>All my Unity skills I taught myself and can teach myself any languages or skills</p>
 
       <div class="badges">
         <span class="badge">Unity / C#</span>
@@ -178,7 +144,7 @@
 
     <h2>Projects</h2>
     <div class="grid">
-      <article class="card reveal">
+      <article class="card">
         <h3>Card-Based Strategy Game</h3>
         <p>A Slay‑the‑Spire‑style deckbuilder focused on clearing waves of enemies and building a deck. Features some custom art.</p>
         <div class="embed">
@@ -187,7 +153,7 @@
         <a class="btn" href="https://github.com/Uncrustable125/CardBattler" target="_blank" rel="noreferrer">View on GitHub</a>
       </article>
 
-      <article class="card reveal">
+      <article class="card">
         <h3>Name Recall Challenge</h3>
         <p>A memory‑based game where users match faces and names. Played with an EEG monitor. Professional project for the NTL group’s NeuroCoach.</p>
         <div class="embed">
@@ -195,11 +161,11 @@
         </div>
         <div class="top-actions" style="justify-content:flex-start">
           <a class="btn" href="https://ntlgroupinc.com/neurocoach/" target="_blank" rel="noreferrer">NTL NeuroCoach Homepage</a>
-          <span style="align-self:center;color:rgb(var(--muted));font-size:12px">Project available on request</span>
+          <span style="align-self:center;color:var(--muted);font-size:12px">Project available on request</span>
         </div>
       </article>
 
-      <article class="card reveal">
+      <article class="card">
         <h3>Farm Game</h3>
         <p>A farm game similar to Stardew Valley or Harvest Moon. Shows off a tile based farm/crop system and a dialog system. First real Unity project; some art original.</p>
         <div class="embed">
@@ -208,7 +174,7 @@
         <a class="btn" href="https://github.com/Uncrustable125/Farm-Game" target="_blank" rel="noreferrer">View on GitHub</a>
       </article>
 
-      <article class="card reveal">
+      <article class="card">
         <h3>Unwinnable Tic‑Tac‑Toe</h3>
         <p>Quick project I made for fun. You can’t win.</p>
         <div class="embed">
@@ -235,7 +201,7 @@
     <p>Beyond game dev, I can tackle software, hardware, and practical projects.</p>
     <ul>
       <li><strong>Programming:</strong> C, C#, C++, Python, SolidWorks, Unity</li>
-      <li><strong>Engineering Tools:</strong> Calculus, IT</li>
+      <li><strong>Engineering Tools:</strong>Calculus, IT</li>
       <li><strong>Hardware Experience:</strong> Microcontrollers, Soldering, 3D Printing, Laser Cutting</li>
       <li><strong>Life Skills:</strong> Recovery and life coach — 10 years, Inter/Intra-personal skills</li>
     </ul>
@@ -252,13 +218,14 @@
       const root = document.documentElement;
       const btnAuto = document.getElementById('themeAuto');
       const btnLight = document.getElementById('themeLight');
-      const btnDark  = document.getElementById('themeDark');
+      const btnDark = document.getElementById('themeDark');
 
       function setPressed(which){
         btnAuto.setAttribute('aria-pressed', String(which==='auto'));
         btnLight.setAttribute('aria-pressed', String(which==='light'));
-        btnDark .setAttribute('aria-pressed', String(which==='dark'));
+        btnDark.setAttribute('aria-pressed',  String(which==='dark'));
       }
+
       function apply(mode){
         if(mode==='light' || mode==='dark'){
           root.setAttribute('data-theme', mode);
@@ -269,14 +236,25 @@
         }
         setPressed(mode||'auto');
       }
-      try{ apply(localStorage.getItem('theme-mode') || 'auto'); }catch(e){ apply('auto'); }
+
+      // init from storage or auto
+      try{
+        const saved = localStorage.getItem('theme-mode');
+        apply(saved || 'auto');
+      }catch(e){ apply('auto'); }
+
       btnAuto.addEventListener('click', ()=>apply('auto'));
       btnLight.addEventListener('click', ()=>apply('light'));
-      btnDark .addEventListener('click', ()=>apply('dark'));
+      btnDark.addEventListener('click', ()=>apply('dark'));
 
-      // Respect system changes while in auto
+      // react to system changes when in auto
       const media = window.matchMedia('(prefers-color-scheme: dark)');
-      media.addEventListener('change', ()=>{ if(!localStorage.getItem('theme-mode')) root.setAttribute('data-theme', 'auto'); });
+      media.addEventListener('change', ()=>{
+        if(!localStorage.getItem('theme-mode')){
+          // in auto mode, just trigger reflow so CSS @media picks up
+          root.setAttribute('data-theme', 'auto');
+        }
+      });
 
       document.getElementById('y').textContent = new Date().getFullYear();
     })();
